cmake_minimum_required(VERSION 3.5)
project(placements)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

#set(SOURCE_FILES Hashmaps/HashmapEvenNumberChars.cpp)
#set(SOURCE_FILES LinkedList/LinkedListAll.cpp)
#set(SOURCE_FILES BitOperations/SortingBinaryArray.cpp)
#set(SOURCE_FILES DynamicProgramming/MaxSumIncrSubsequence.cpp)
#set(SOURCE_FILES DynamicProgramming/LongestIncreasingSubsequence.cpp)
#set(SOURCE_FILES DynamicProgramming/LongestBitonicSubsequence.cpp)
#set(SOURCE_FILES StringsAndCharArrays/StringFunctions.cpp)
#set(SOURCE_FILES DynamicProgramming/WordBreakProblem.cpp)
#set(SOURCE_FILES DynamicProgramming/MaximumLengthChainOfPairs.cpp)
#set(SOURCE_FILES StringsAndCharArrays/InterleavedString.cpp)
#set(SOURCE_FILES DynamicProgramming/DPInterleavedStrings.cpp)
#set(SOURCE_FILES DynamicProgramming/MinCostPath.cpp)
#set(SOURCE_FILES DynamicProgramming/UniquePath.cpp)
#set(SOURCE_FILES DynamicProgramming/MinimumInitialPointsToReachDestination.cpp)
#set(SOURCE_FILES DynamicProgramming/LongestPathInMatrixWithConstrains.cpp)
#set(SOURCE_FILES DynamicProgramming/NumberOfPathsWithExactlyKCoins.cpp)
#set(SOURCE_FILES Trees/BinaryTreeToBST.cpp)
#set(SOURCE_FILES StringsAndCharArrays/ConcatStrings.cpp)
#set(SOURCE_FILES Patterns/Pattern1.cpp)
#set(SOURCE_FILES Trees/TreeTraversal.cpp)
#set(SOURCE_FILES Templates/Vector.cpp)
set(SOURCE_FILES Hackerank/anagrams.cpp)
#set(SOURCE_FILES Hackerank/reducedString.cpp)

add_executable(placements ${SOURCE_FILES})